test/UT/testassets/https_EndpointSlice/ingress.json
{
  "Sni": {
  },
  "Routes": {
    "minimal-ingress.default:/foo": {
      "Order": 0,
      "Key": "minimal-ingress.default:/foo",
      "Match": {
        "Hosts": [ "*" ],
        "Paths": [ "/foo" ]
      },
      "ClusterId": "frontend.default:443"
    }
  },
  "Clusters": {
    "frontend.default:443": {
      "Key": "frontend.default:443",
      "Destinations": [
        {
          "Address": "https://10.244.2.38:443"
        }
      ]
    }
  }
}
