test/UT/testassets/https_EndpointSlice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: default
  annotations:
    vkproxy.ingress.kubernetes.io/backend-protocol: https
spec:
  rules:
  - host: 'subdomain1.example.com'
    http:
      paths:
      - path: /foo*
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend
            port:
              number: 443
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: default
spec:
  selector:
    app: frontend
  ports:
  - name: https
    port: 443
    targetPort: 443
  type: ClusterIP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: frontend
  namespace: default
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 443
  - name: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - "10.244.2.38"
    conditions:
      ready: true
    hostname: pod-1
    nodeName: node-1
    zone: us-west2-a
  - addresses:
      - "10.244.12.38"
    conditions:
      ready: true
    hostname: pod-1
    nodeName: node-1
    zone: us-west2-a
  - addresses:
      - "10.244.2.35"
    conditions:
      ready: false
    hostname: pod-2
    nodeName: node-2
    zone: us-west2-a
